Improve logging.