@@ -9,14 +9,16 @@ import java.util.Map;
 import org.ibm.rest.dto.GetUserRepositoriesDTO;
 import org.ibm.rest.dto.RepositoryDTO;
 
-import com.fasterxml.jackson.core.JacksonException;
 import com.fasterxml.jackson.core.JsonParser;
 import com.fasterxml.jackson.databind.DeserializationContext;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.deser.std.StdDeserializer;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
-@SuppressWarnings("serial")
 public class GetReposOfUserDeserializerFromEndpointReply extends StdDeserializer<GetUserRepositoriesDTO> {
+
+	Logger logger = LoggerFactory.getLogger(GetReposOfUserDeserializerFromEndpointReply.class);
 
 	public GetReposOfUserDeserializerFromEndpointReply() {this(null);}
 	
@@ -24,25 +26,25 @@ public class GetReposOfUserDeserializerFromEndpointReply extends StdDeserializer
 		super(vc);
 	}
 
-	@SuppressWarnings("deprecation")
 	@Override
-	public GetUserRepositoriesDTO deserialize(JsonParser jp, DeserializationContext ctxt)
-			throws IOException, JacksonException {
+	public GetUserRepositoriesDTO deserialize(JsonParser jp, DeserializationContext _deserializationContext)
+			throws IOException{
 		
-		JsonNode node = null;
+		JsonNode node;
 		try { 
 			node = jp.getCodec().readTree(jp);
 		} catch (Exception e) {
+			logger.error(e.toString());
 			throw e;
 		}
 
-		ArrayList<RepositoryDTO> result = new ArrayList<RepositoryDTO>();
+		ArrayList<RepositoryDTO> result = new ArrayList<>();
 
 		// should have a custom exception here
 		// otherwise NPE
 		for (JsonNode child : node.get("repositories")) {
 			
-			Map<String, Object> reflectiveMap = new HashMap<String, Object>();
+			Map<String, Object> reflectiveMap = new HashMap<>();
 			
 			for (Field f : RepositoryDTO.class.getDeclaredFields()) {
 				if (f.getName().contains("UID")) {
@@ -50,10 +52,10 @@ public class GetReposOfUserDeserializerFromEndpointReply extends StdDeserializer
 				}
 				Object newObject = null;
 				if (f.getType().equals(Long.class)) {
-					newObject = new Integer(1).longValue();
+					newObject = Integer.valueOf(1).longValue();
 				}
 				if (f.getType().equals(String.class)) {
-					newObject = new String("");
+					newObject = "";
 				}
 				if (newObject == null) {
 					throw new IOException("Type not present.");
